tests/fixtures/invalid/defectDuplicateKey.yini
^ App
name = "Demo"
name = "Override" // INVALID: duplicate key in same section
